--- a/scss/variables/_colores.scss
+++ b/scss/variables/_colores.scss
@@ -1,6 +1,13 @@
 $naranja: rgb(255, 179, 0);
 $blanco: white;
-$txt-ccg: rgb(84, 113, 168);
+$txt-ccg2: rgb(84, 113, 168);
+$txt-ccg: white;
 $celeste: rgb(11, 164, 224);
 $color:red;
 $fondo:blue;
+$ccg2:#084298;
+$ccg3:#1b5794;
+$ccg7: linear-gradient(90deg, #084298 0%, #1b5794 35%, #084298 100%);
+$ccg5: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+$ccg6: linear-gradient(to top, #1C7CE0, #150051);
+$ccg: linear-gradient(to top, #084298, #1b5794);
