--- a/css/style.css
+++ b/css/style.css
@@ -7,26 +7,33 @@
 .mynav .logo {
   width: 15vh; }
 
+.mynav {
+  background: linear-gradient(to top, #084298, #1b5794);
+  border-bottom: white solid 1px; }
+
 .mynav a:hover {
   border-radius: 20%;
-  border-bottom: 2px solid #5471a8;
+  border-bottom: 2px solid white;
   display: inline-block;
-  color: #5471a8 !important; }
+  color: white !important; }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: #5471a8;
+  color: white;
   font-weight: 700;
   font-size: 12px; }
 
 .navbar-dark .navbar-nav .active {
-  color: #5471a8 !important; }
+  color: white !important; }
+
+.aaa {
+  color: red;
+  background: #2e6329; }
 
 .tamaño-em {
   font-size: 7px; }
 
 .navbar-toggler {
-  font-size: 1rem;
-  background: #5471a8; }
+  font-size: 1rem; }
 
 .container-btn-wp {
   background-color: #2e6329;
@@ -110,7 +117,7 @@
   top: 5px;
   background: #05af68;
   border-radius: 5px;
-  box-shadow: 3px 3px 3px #5471a8; }
+  box-shadow: 3px 3px 3px white; }
 
 .txt-carousel-2 {
   font-size: 0.7em;
@@ -123,7 +130,7 @@
   top: 5px;
   background: #0571af;
   border-radius: 5px;
-  box-shadow: 3px 3px 3px #5471a8; }
+  box-shadow: 3px 3px 3px white; }
 
 .txt-carousel-3 {
   font-size: 0.7em;
@@ -136,7 +143,7 @@
   top: 5px;
   background: #e7a50c;
   border-radius: 5px;
-  box-shadow: 3px 3px 3px #5471a8; }
+  box-shadow: 3px 3px 3px white; }
 
 .txt-carousel-4 {
   font-size: 0.7em;
@@ -149,7 +156,7 @@
   top: 5px;
   background: #fff;
   border-radius: 5px;
-  box-shadow: 3px 3px 3px #5471a8; }
+  box-shadow: 3px 3px 3px white; }
 
 .img-carousel {
   height: 30vh; }
