--- a/scss/variables/_colores.scss
+++ b/scss/variables/_colores.scss
@@ -7,7 +7,7 @@ $color:red;
 $fondo:blue;
 $ccg2:#084298;
 $ccg3:#1b5794;
-$ccg7: linear-gradient(90deg, #084298 0%, #1b5794 35%, #084298 100%);
-$ccg5: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
-$ccg6: linear-gradient(to top, #1C7CE0, #150051);
-$ccg: linear-gradient(to top, #084298, #1b5794);
+$ccg15: linear-gradient(90deg, #084298 0%, #1b5794 35%, #084298 100%);
+$ccg14: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+$ccg: linear-gradient(to top, #1C7CE0, #150051);
+$ccg8: linear-gradient(to top, #084298, #1b5794);
